--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "movie_editor"]
+[submodule "modules/movie_editor"]
 	path = modules/movie_editor
 	url = git@github.com:ericj974/movie_editor.git
