--- a/environment_3.yml
+++ b/environment_3.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - python=3.* #  - libstdcxx-ng # Bug fix for "Cannot load `swrast` and `iris` drivers"
+  - face_recognition
   - numpy
   - opencv
   - pillow
